# concert-finder

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  sonarcloud.yaml
src/: db.py  main.py
src/scraping/: a38.py  bem.py  tixa.py
src/static/: style.css
src/templates/: index.html
src/templates/fragments/: events.html
