[tool.poetry]
name = "concert-finder"
version = "0.1.0"
description = ""
authors = ["Andi Péter <andipeti2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
parsel = "^1.8.1"
requests = "^2.31.0"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
jinja2 = "^3.1.3"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
pre-commit = "^3.6.1"
types-requests = "^2.31.0.20240125"
mypy = "^1.8.0"
ipykernel = "^6.29.2"
types-pytz = "^2024.1.0.20240203"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
